:bug: Horizontal scroll on profile

--- a/src/styles/_component.browse.scss
+++ b/src/styles/_component.browse.scss
@@ -135,6 +135,7 @@ iframe {
 	left: 0;
 	width: 100%;
 	height: 100%;
+	overflow-x: hidden;
 	&--open {
 		display: block;
 		top: 0;
